embassy-sync/tests/ui/pubsub_send/subscriber_noop_mutex.stderr
error[E0277]: `*mut ()` cannot be shared between threads safely
 --> tests/ui/pubsub_send/subscriber_noop_mutex.rs:8:74
  |
8 |     let _sub: SendDynSubscriber<'_, u32> = channel.subscriber().unwrap().into();
  |                                                                          ^^^^ `*mut ()` cannot be shared between threads safely
  |
  = help: within `NoopRawMutex`, the trait `Sync` is not implemented for `*mut ()`
note: required because it appears within the type `PhantomData<*mut ()>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `NoopRawMutex`
 --> src/blocking_mutex/raw.rs
  |
  | pub struct NoopRawMutex {
  |            ^^^^^^^^^^^^
  = note: required for `SendDynSubscriber<'_, u32>` to implement `From<Subscriber<'_, NoopRawMutex, u32, 4, 4, 4>>`
  = note: required for `Subscriber<'_, NoopRawMutex, u32, 4, 4, 4>` to implement `Into<SendDynSubscriber<'_, u32>>`
